tests/parsing/smtlib/poly/errors/017_sorted_var_bad_name_2.psmt2
(set-logic ALL)
(assert (forall ((as int)) true))
