tests/parsing/smtlib/poly/errors/017_sorted_var_bad_name_2.expected
File "tests/parsing/smtlib/poly/errors/017_sorted_var_bad_name_2.psmt2", line 2, character 18-20:
Error while parsing a sorted variable, read the reserved word 'as',
      but expected a symbol, i.e. a variable name.
